[fix]: Fixed scrolling and overflow issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,6 +68,9 @@
     width: 0px;
 } */
 
+html {
+	overflow: hidden;
+}
 body {
 	display: flex;
 	flex-direction: column;
@@ -76,5 +79,6 @@ body {
 	margin: 0;
 	padding: 0;
 	min-height: 100vh;
+	overflow: auto;
 	/* outline: 2px solid red; */
 }
